--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-PyQt5
-face_recognition
-opencv-python
-numpy
-sqlite3 
-opencv-contrib-python
-onnxruntime  
-pandas
-requests
-openpyxl
+numpy==1.24.3
+opencv-python==4.8.0.76
+face-recognition==1.3.0
+scikit-learn==1.3.0
+matplotlib==3.7.2
+joblib==1.3.2
+pandas==2.0.3
+PyQt5==5.15.9
+opencv-contrib-python==4.8.0.76
+onnxruntime==1.15.1
+requests==2.31.0
+openpyxl==3.1.2
+insightface==0.7.3
